Fixed missing background images

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -759,7 +759,7 @@ form button:hover {
     }
 
     #machinepic::before {
-        background-image: url("/kernbohrungen-guenther/static/images/loch_filter.png");
+        background-image: url(var(--baseurl)"/static/images/loch_filter.png");
         background-position: 60% 100%;
     }
 
